Fixup to: All White labeling (squashed)

--- a/sass/components/_popover.scss
+++ b/sass/components/_popover.scss
@@ -318,12 +318,6 @@
         }
     }
 
-    .more-modal__button {
-        .btn {
-            height: 42px;
-        }
-    }
-
     .more-modal__list {
         .more-modal__row {
             border: none;
